



[gd_scene load_steps=2 format=3 uid="uid://e8xvn8y8qkqxe"]

[ext_resource type="Script" path="res://scripts/ChapterSequenceGame.gd" id="1_0s8vw"]

[node name="ChapterSequenceGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_0s8vw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="InstructionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Arrange the chapter names in the correct order (1-18):"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="InstructionLabel2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Click two chapters to swap their positions"
horizontal_alignment = 1
modulate = Color(0.8, 0.8, 0.8, 1)

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ChaptersContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ButtonsContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BackBtn" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Back to Menu"

[node name="SubmitBtn" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Submit Answer"

[node name="NextBtn" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Next Game"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="FeedbackLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Feedback will appear here"
autowrap_mode = 3

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Score: 0"
horizontal_alignment = 1




